Criacao do token do usuario
